# TreeCiv

./: CMakeLists.txt  README.md
src/: GatheredResourcesModel.cpp  GatheredResourcesModel.h  ImageSourceChooser.h  MapTreeModel.cpp  MapTreeModel.h  main.cpp  qml.qrc
src/Interfaces/: IResourceSource.h
src/TreeParts/: BranchNode.cpp  BranchNode.h  TreeGrowthStrategy.cpp  TreeGrowthStrategy.h  TreeGrowthStrategy_test.cpp  TreeNode.cpp  TreeNode.h  TreeParser.cpp  TreeParser.h  TreeParser_test.cpp  TrunkNode.cpp  TrunkNode.h
src/TreeParts/ConcreteNodes/: BranchNode.cpp  BranchNode.h  NestNode.cpp  NestNode.h  Nodes_test.cpp  ResourceNode.cpp  ResourceNode.h  TrunkNode.cpp  TrunkNode.h
src/TreeParts/Interfaces/: ITreeGrowthStrategy.h  ResourceType.cpp  ResourceType.h  TreeNode.cpp  TreeNode.h
src/resources/: DragSprite.qml  SmallVBar.qml  TreeCarcassDelegate.qml  TreeGatherableDelegate.qml  TreeItemDelegate.qml  TreeNestDelegate.qml  dragSpriteCreate.js  main.qml
